web-app/css/main.css
/* ... */
.dir-profile-col-hdg {
    font-size: 16px;
    font-weight: bold;
    margin: 0;
}

div.dir-profile {
    margin-top: 25px;
}

.dir-profile-desc {
    font-weight: bold;
}

.dir-profile .row {
    padding: 3px 0;
}

.dir-profile .shaded {
    background-color: #f2f2f2;
}

.dir-profile-col-hdg.visible-xs {
    float: left;
    font-size: 14px;
    padding-right: 8px;
}

.display-in-dir-spacer {
    padding: 2px;
}

.display-in-dir-check {
    float: left;
}

/***********************/
/* Media Query Section */
/***********************/

@media screen and (max-width:991px) {
    .sm-fix {
        width: 100%;
    }
}

@media(max-width:568px){
    .mobile-errors {
        display: inline-block;
    }

    .xs-errors-visible {
        display: none;
    }

    .pi-phone-ctry {
        width: 40%;
        display: block;
    }

    .pi-phone-area {
        width: 40%;
    }

    .pi-phone-num {
        width: 60%
    }

    .pi-phone-extn {
        width: 30%;
    }

    input[type="checkbox"].dir-profile-nav-check {
        margin-top: 0;
    }

    button.closebtn {
        padding: 2.85em 2.65em;
    }
}

@media screen and (max-width:767px) {
    .edit-flex-div {
        display: inline;
    }

    .clear-xs-sm {
        clear: both;
    }

    .email-text,
    a.email-text:hover,
    a.email-text:active,
    a.email-text:focus {
        color: #333;
        text-decoration: none;
    }
}

/* Catches mobile devices up through iPhone X landscape */
@media screen and (max-width:812px) {
    /* Fix iPhone-only issue where background scrolls when user touches an <input> element to scroll */
    body.modal-open {
        overflow: hidden;
        position:fixed;
        width: 100%;
    }
}

@media screen and (min-width:768px) {
    .col-md-6 {
        float: left;
        width: 50%;
    }

    .col-md-4 {
        float: left;
        width: 33%;
    }

    .secqa-answer {
        float: right;
    }

    .mobile-visible {
        visibility: hidden;
        position: absolute;
        overflow: hidden;
        clip: rect(0 0 0 0);
        height: 1px;
        width: 1px;
        margin: -1px;
        padding: 0;
        border: 0;
    }

    .desktop-visible {
        visibility: visible;
        position: relative;
        overflow: auto;
        height: auto;
        width: auto;
        margin: 0px;
    }

    .dialog-hdr1 {
        font-size: 24px;
        padding: 1em 1em 0.75em;
    }
    
    button.closebtn {
        padding: 2.35em;
    }

    .pad-dialog-lr {
        padding: 0em 1.5em;
    }

    .mobile-errors-acType {
        display: none;
    }

    .xs-errors-visible {
        display: none;
    }

    .pi-modal .modal-dialog {
        height: auto;
    }

    .pi-modal.modal.in .modal-dialog {
        -webkit-transform: translate(0, 18%);
        -ms-transform: translate(0, 18%);
        transform: translate(0, 18%);
    }

    .edit-addr.pi-modal.modal.in .modal-dialog,
    .edit-pers-details.pi-modal.modal.in .modal-dialog,
    .edit-emer-contact.pi-modal.modal.in .modal-dialog,
    .edit-directory-profile.pi-modal.modal.in .modal-dialog,
    .security-qa.pi-modal.modal.in .modal-dialog,
    .disability-status.pi-modal.modal.in .modal-dialog,
    .edit-veteran.pi-modal.modal.in .modal-dialog {
        -webkit-transform: translate(0, 0);
        -ms-transform: translate(0, 0);
        transform: translate(0, 0);
    }

    .edit-phone.pi-modal .modal-dialog {
        width: 650px;
    }

    .edit-email.pi-modal .modal-dialog {
        width: 600px;
    }

    .pi-modal .modal-content {
        height: auto;
        border-radius: 6px;
        overflow-y: visible;
    }

    .pi-modal-title {
        padding: 0.875em 0.875em 0.1em 1.375em;
    }

    .clear-row .col-md-4:nth-child(3n+1),
    .edit-addr .maybe-clear:nth-child(3n+1),
    .edit-emer-contact div.maybe-clear:nth-child(3n+1) {
        clear: left;
    }

    .edit-veteran input.hasMultiCalendarPicker.pi-date-input + span.calendar-img {
        left: 12em;
    }
}

@media screen and (min-width:1024px) {
    .col-lg-4 {
        width: 33%;
    }

    .details-section.overview {
        width: 310px;
    }

    .edit-addr .modal-dialog,
    .edit-pers-details .modal-dialog,
    .edit-emer-contact .modal-dialog {
        width: 896px;
    }

    .edit-directory-profile .modal-dialog {
        width: 960px;
    }

    .security-qa .modal-dialog {
        width: 728px;
    }

    .disability-status.pi-modal .modal-dialog,
    .edit-veteran.pi-modal .modal-dialog {
        width: 988px;
    }

    .view-list div.item-wrapper:nth-child(3n+1),
    .emergency-contact-list div.col-xs-12:nth-child(3n+1),
    .phone-list > .row > div:nth-child(3n+1),
    .addr-list > div:nth-child(3n+1) {
        clear: left;
    }
}

/*Tablet device*/
@media screen and (min-width: 768px) and (max-width: 1023px) {
    .view-list div.item-wrapper:nth-child(2n+1),
    .emergency-contact-list div.col-xs-12:nth-child(2n+1),
    .phone-list > .row > div:nth-child(2n+1),
    .addr-list > div:nth-child(2n+1) {
        clear: left;
    }

    .pi-modal .modal-dialog {
        width: 97%;
    }
}

